<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latihan_persistence"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    
    <Button
        android:id="@+id/btnInternalstorage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnexstorage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_storage"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tugas_8_fitria_sari"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="300dp"/>

</LinearLayout>